# reinhardt-cloud

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Coastfile  Makefile.toml  README.md  SECURITY.md  audit.toml  codecov.yml  docker-compose.yml  release-plz.toml  rust-toolchain.toml  rustfmt.toml
app/: CLAUDE.md  Cargo.toml  Makefile.toml  README.md  index.html
app/migrations/auth/: 0001_initial.rs  0002_add_email_unique.rs  0003_add_admin_fields.rs  0003_initial.rs
app/migrations/clusters/: 0003_initial.rs
app/migrations/deployments/: 0002_add_cluster_id_fk.rs  0003_add_cluster_id_fk.rs  0003_merge_0001_initial_0002_add_cluster_id_fk_0_and_more.rs  0004_initial.rs
app/settings/: .gitignore  base.example.toml  base.toml  ci.example.toml  ci.toml  local.example.toml
app/src/: apps.rs  client.rs  config.rs  lib.rs  migrations.rs  shared.rs
app/src/apps/: auth.rs  realtime.rs
app/src/client/: layout.rs  pages.rs  router.rs  state.rs  ws.rs
app/src/config/: admin.rs  apps.rs  middleware.rs  settings.rs  urls.rs
app/src/shared/: errors.rs  types.rs
app/tests/: e2e.rs  e2e_tests.rs  openapi_test.rs  smoke_test.rs
app/tests/bruno/: bruno.json
app/tests/e2e/: clusters_deployments.rs
crates/nuages-cli/: Cargo.toml
crates/nuages-cli/src/: client.rs  commands.rs  config.rs  feature_detector.rs  main.rs  settings_reader.rs  toml_generator.rs
crates/nuages-core/: Cargo.toml
crates/nuages-core/src/: error.rs  inference.rs  lib.rs  pagination.rs
crates/nuages-k8s/: Cargo.toml
crates/nuages-k8s/src/: resources.rs
crates/nuages-operator/: Cargo.toml
crates/nuages-operator/src/: error.rs  inference.rs  main.rs  reconciler.rs  resources.rs
crates/nuages-types/: Cargo.toml
crates/nuages-types/src/: cluster.rs  config.rs  crd.rs  deployment.rs  introspect.rs  lib.rs  nuages_toml.rs
crates/reinhardt-cloud/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-cloud-agent/: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md
crates/reinhardt-cloud-agent/src/: main.rs
crates/reinhardt-cloud-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-cloud-cli/src/: client.rs  commands.rs  config.rs  crd_version.rs  dockerfile_generator.rs  feature_detector.rs  main.rs  settings_reader.rs  toml_generator.rs
crates/reinhardt-cloud-cli/tests/: cli_startup.rs
crates/reinhardt-cloud-core/: CHANGELOG.md  Cargo.toml
crates/reinhardt-cloud-core/src/: auth.rs  error.rs  inference.rs  infrastructure_derivation.rs  lib.rs  mocks.rs  plugin.rs  services.rs  traits.rs
crates/reinhardt-cloud-core/tests/: auth_tests.rs  build_service_tests.rs  fixtures.rs  log_service_tests.rs  plugin_registry_tests.rs  property_fuzz_tests.rs
crates/reinhardt-cloud-grpc/: CHANGELOG.md  Cargo.toml
crates/reinhardt-cloud-grpc/src/: agent_claims.rs  config.rs  health.rs  interceptor.rs  lib.rs  registry.rs  services.rs  settings.rs  sse.rs  test_utils.rs
crates/reinhardt-cloud-k8s/: CHANGELOG.md  Cargo.toml
crates/reinhardt-cloud-k8s/src/: client.rs  lib.rs  resources.rs
crates/reinhardt-cloud-operator/: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md
crates/reinhardt-cloud-operator/src/: error.rs  inference.rs  main.rs  metrics.rs  reconciler.rs  resources.rs  source_build.rs
crates/reinhardt-cloud-proto/: CHANGELOG.md  Cargo.toml  build.rs
crates/reinhardt-cloud-proto/proto/: build.proto  cluster_agent.proto  common.proto  log.proto  plugin.proto
crates/reinhardt-cloud-proto/src/: lib.rs
crates/reinhardt-cloud-telemetry/: CHANGELOG.md  Cargo.toml
crates/reinhardt-cloud-telemetry/src/: lib.rs  log_service.rs  propagation.rs  proto_convert.rs  schema.rs  tracing_init.rs
crates/reinhardt-cloud-telemetry/tests/: loki_integration.rs  trace_context_layer.rs
crates/reinhardt-cloud-types/: CHANGELOG.md  Cargo.toml
crates/reinhardt-cloud-types/src/: agent.rs  build.rs  cluster.rs  config.rs  crd.rs  deployment.rs  introspect.rs  lib.rs  log.rs  reinhardt_cloud_toml.rs  user.rs  validation.rs
crates/reinhardt-cloud/src/: lib.rs
dashboard/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  index.html  reinhardt-cloud.toml
dashboard/migrations/auth/: 0003_initial.rs  0004_add_email_verification_tokens.rs  0005_add_social_accounts.rs  0006_add_social_account_token_metadata.rs  0007_add_api_keys.rs
dashboard/migrations/clusters/: 0001_initial.rs  0002_add_user_id.rs  0003_add_token_hash.rs  0004_replace_user_id_with_organization_id.rs  0005_add_constraint_clusters.rs  0005_add_organization_id_name_unique.rs
dashboard/migrations/deployments/: 0001_initial.rs  0002_add_user_id.rs  0003_add_cluster_id_fk.rs  0004_replace_user_id_with_organization_id.rs  0005_add_reinhardt_app_yaml.rs  0006_rename_deployments_project_name_rename_depl_and_more.rs
dashboard/migrations/github/: 0001_initial.rs  0002_rename_github_projects_project_name_alter_g_and_more.rs
dashboard/migrations/organizations/: 0001_initial.rs  0002_organizations_created_by_alter_organization_and_more.rs
dashboard/scripts/: .gitignore  infra_down.sh  infra_reset.sh  infra_up.sh  parse_local_toml.py  runserver_with_infra.sh
dashboard/settings/: .gitignore  base.example.toml  base.toml  ci.example.toml  ci.toml  devcontainer.example.toml  local.example.toml  local.toml  production.example.toml  production.toml  staging.example.toml  staging.toml
dashboard/src/: apps.rs  client.rs  config.rs  lib.rs  main.rs  server.rs  shared.rs  utils.rs
dashboard/src/apps/: auth.rs  clusters.rs  dashboard.rs  deployments.rs  github.rs  health.rs  organizations.rs  realtime.rs  validators.rs  vcs.rs
dashboard/src/client/: client_urls.rs  components.rs  layout.rs  link_interception.rs  route_table.rs  router.rs  state.rs  url.rs  ws.rs
dashboard/src/config/: admin.rs  (+9 more)
dashboard/tests/: e2e.rs  openapi_test.rs  server_startup.rs  smoke_test.rs  unit.rs  wasm.rs
tests/: Cargo.toml
tests/e2e/: cli_auth.rs  credentials.rs  harness.rs  mod.rs  preview.rs  source_build.rs  source_pipeline.rs  webhook.rs
tests/src/: lib.rs
(+711 files in other folders)
