[workspace]
resolver = "2"
members = [
	# Library crates
	"crates/nuages-types",
	"crates/nuages-core",
	"crates/nuages-k8s",
	# Binary crates
	"crates/nuages-operator",
	"crates/nuages-cli",
	# Reinhardt startproject application
	"app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSL-1.1"
repository = "https://github.com/kent8192/nuages"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Kubernetes
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }

# Reinhardt — umbrella crate providing: HTTP server, auth (JWT + Argon2), database (SeaQuery),
# configuration, DI container, middleware, OpenAPI, and management commands.
# Direct hyper/jsonwebtoken/argon2/sea-query deps are NOT needed — reinhardt provides them.
# Workaround for kent8192/reinhardt-web#2362: default-features = false to avoid client-router mismatch.
# Workaround for kent8192/reinhardt-web#2363: db-sqlite included because reinhardt-commands
# unconditionally references connect_sqlite without feature gate.
# Remove these workarounds when the upstream issues are resolved.
reinhardt = { package = "reinhardt-web", version = "0.1.0-rc.9", default-features = false, features = ["database", "db-postgres", "db-sqlite", "auth", "auth-jwt", "argon2-hasher", "core", "conf", "server", "di", "middleware", "openapi", "openapi-router", "commands", "test", "testcontainers"] }

# PostgreSQL driver (sea-query is available via reinhardt::prelude — no direct dep needed)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Internal workspace crates
nuages-types = { path = "crates/nuages-types" }
nuages-core = { path = "crates/nuages-core" }
nuages-k8s = { path = "crates/nuages-k8s" }

# Testing
rstest = "0.26"
tokio-test = "0.4"

[workspace.lints.clippy]
module_name_repetitions = "allow"
