[package]
name = "reinhardt-nuages"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "nuages"
path = "src/lib.rs"

[[bin]]
name = "manage"
path = "src/bin/manage.rs"

[dependencies]
reinhardt = { workspace = true }
nuages-types = { workspace = true }
nuages-core = { workspace = true }
nuages-k8s = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ctor = "0.6"
inventory = "0.3"

[dev-dependencies]
rstest = { workspace = true }
serial_test = "3.2"
anyhow = { workspace = true }

[lints]
workspace = true
