[package]
name = "reinhardt-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "reinhardt_cloud"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "manage"
path = "src/bin/manage.rs"

[dependencies]
reinhardt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reinhardt-cloud-types = { workspace = true }
reinhardt-cloud-core = { workspace = true }
reinhardt-cloud-k8s = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ctor = "0.6"
inventory = "0.3"
dashmap = "6"
async-trait = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "Event", "History", "Location", "Storage", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent"] }
js-sys = "0.3"
gloo-net = "0.6"
gloo-timers = "0.3"
console_error_panic_hook = "0.1"

[build-dependencies]
cfg_aliases = "0.2"

[dev-dependencies]
rstest = { workspace = true }
serial_test = "3.2"
anyhow = { workspace = true }

[lints]
workspace = true
