[package]
name = "reinhardt-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "reinhardt_cloud"
path = "src/lib.rs"

[[bin]]
name = "manage"
path = "src/bin/manage.rs"

[dependencies]
reinhardt = { workspace = true }
reinhardt-auth = { workspace = true }
reinhardt-cloud-types = { workspace = true }
reinhardt-cloud-core = { workspace = true }
reinhardt-cloud-k8s = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ctor = "0.6"
inventory = "0.3"

[dev-dependencies]
rstest = { workspace = true }
serial_test = "3.2"
anyhow = { workspace = true }

[lints]
workspace = true
