[package]
name = "nuages-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "nuages"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
nuages-types = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
url = "2"

[dev-dependencies]
rstest = { workspace = true }
serial_test = "3.2"
tempfile = "3"

[lints]
workspace = true
