[package]
name = "nuages-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
nuages-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = "9"

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
