[package]
name = "nuages-operator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
nuages-types = { workspace = true }
nuages-core = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
base64 = "0.22"

[dev-dependencies]
rstest = { workspace = true }
tower = "0.5"
http = "1"
http-body-util = "0.1"

[lints]
workspace = true
