[package]
name = "reinhardt-cloud-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "reinhardt-cloud-agent"
path = "src/main.rs"

[dependencies]
reinhardt-cloud-types = { workspace = true }
reinhardt-cloud-proto = { workspace = true }

kube = { workspace = true }
k8s-openapi = { workspace = true }
rustls = { workspace = true }
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
