[package]
name = "reinhardt-cloud-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "reinhardt-cloud"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
reinhardt-cloud-types = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2"
serde_json = { workspace = true }
tempfile = "3"
rpassword = "7"
colored = "3"
dirs = "6"

[dev-dependencies]
rstest = { workspace = true }
serial_test = "3.2"

[lints]
workspace = true
