[package]
name = "reinhardt-cloud-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "reinhardt-cloud"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
colored = "3"
dirs = "6"
k8s-openapi = { workspace = true }
kube = { workspace = true }
reinhardt-cloud-telemetry = { workspace = true }
reinhardt-cloud-types = { workspace = true }
reqwest = { workspace = true }
rpassword = "7"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
rstest = { workspace = true }
serial_test = "3.2"

[lints]
workspace = true
