[package]
name = "reinhardt-cloud-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Reinhardt Cloud deployments"

[[bin]]
name = "reinhardt-cloud"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
colored = "3"
dirs = "6"
k8s-openapi = { workspace = true }
kube = { workspace = true }
reinhardt-cloud-core = { workspace = true }
reinhardt-cloud-telemetry = { workspace = true }
reinhardt-cloud-types = { workspace = true }
reinhardt = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
rstest = { workspace = true }
serial_test = "3.2"
wiremock = "0.6"

[lints]
workspace = true
