[package]
name = "reinhardt-cloud-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
reinhardt-cloud-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
async-trait = "0.1"

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
