[package]
name = "reinhardt-cloud-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core services and domain logic for Reinhardt Cloud"

[dependencies]
reinhardt-cloud-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
dashmap = "6"
async-stream = "0.3"

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
