[package]
name = "reinhardt-cloud-k8s"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes resource helpers for Reinhardt Cloud"

[dependencies]
kube = { workspace = true }
k8s-openapi = { workspace = true }
reinhardt-cloud-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
