[package]
name = "reinhardt-cloud-operator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
reinhardt-cloud-types = { workspace = true }
reinhardt-cloud-core = { workspace = true }
reinhardt-cloud-telemetry = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
base64 = "0.22"
dashmap = "6"
prometheus = "0.14"

[dev-dependencies]
rstest = { workspace = true }
serial_test = "3.2"
tower = "0.5"
http = "1"
http-body-util = "0.1"

[lints]
workspace = true
