[package]
name = "reinhardt-cloud-operator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
reinhardt-cloud-types = { workspace = true }
reinhardt-cloud-core = { workspace = true }
reinhardt-cloud-telemetry = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
base64 = "0.22"
uuid = { workspace = true }
dashmap = "6"
prometheus = "0.14"

[dev-dependencies]
rstest = { workspace = true }
serial_test = "3.2"
tower = "0.5"
http = "1"
http-body-util = "0.1"
# Used by tests/configmap_typed_coercion.rs to round-trip the operator's
# generated production.toml through reinhardt-conf and assert that the
# `${VAR}` placeholders resolve into typed fields (refs kent8192/reinhardt-web#4232).
reinhardt = { workspace = true }
tempfile = "3"

[lints]
workspace = true
