[package]
name = "reinhardt-cloud-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
