[package]
name = "reinhardt-cloud-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol Buffer and gRPC type definitions for Reinhardt Cloud"

[dependencies]
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
