[package]
name = "reinhardt-cloud-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
reinhardt-cloud-proto = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
