[package]
name = "reinhardt-cloud-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
reinhardt-cloud-proto = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
# Core LogService trait + types (read path implements the core trait) and
# WebSocket/async-stream support for Loki /tail.
reinhardt-cloud-core = { workspace = true }
reinhardt-cloud-types = { workspace = true }
tokio-tungstenite = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serial_test = "3.2"
testcontainers = { workspace = true }

[lints]
workspace = true
