[package]
name = "reinhardt-cloud-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true
